<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dang_nhap"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_marginRight="@dimen/dp_40"
        android:autofillHints="username"
        android:hint="@string/ten_dang_nhap"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_40"
        android:autofillHints="password"
        android:hint="@string/mat_khau"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@color/blue"
        android:text="@string/dang_nhap" />

    <TextView
        android:id="@+id/text_view_click_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/nhan_vao_de_dang_ky" />

</LinearLayout>
