<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_20"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.activity.EditBookActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sua_sach"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_marginRight="@dimen/dp_40"
        android:autofillHints="name"
        android:hint="@string/ten_sach"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_author_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_40"
        android:autofillHints="name"
        android:hint="@string/tac_gia"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_40"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_loai"
            android:textSize="@dimen/sp_16" />

        <Spinner
            android:id="@+id/spinner_genre_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10" />
    </LinearLayout>

    <Button
        android:id="@+id/button_edit_book_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@color/blue"
        android:text="@string/sua_sach" />

    <Button
        android:id="@+id/button_back_from_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/blue"
        android:text="@string/ve_trang_chu" />

</LinearLayout>
